--- a/Config_and_Environment/config.properties
+++ b/Config_and_Environment/config.properties
@@ -1,3 +1,3 @@
-Browser=CHROME
+Browser=SAUCE_LABS
 URL=https://www.seleniumeasy.com/test/basic-first-form-demo.html
 SAUCELABS_KEY=f19a69a7-55c8-4c70-aff7-c0483b0a9353
