Added AppliTools code

--- a/Config_and_Environment/config.properties
+++ b/Config_and_Environment/config.properties
@@ -1,3 +1,4 @@
 Browser=CHROME
 URL=https://www.seleniumeasy.com/test/basic-first-form-demo.html
 SAUCELABS_KEY=f19a69a7-55c8-4c70-aff7-c0483b0a9353
+APPLITOOLS_API_KEY=mSy100iGSzZgdzamuajasRfayfFZXvbseYVvi8DN1y107hk110
