--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,12 @@
             <artifactId>commons-model</artifactId>
             <version>4.2.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.applitools/eyes-selenium-java3 -->
+        <dependency>
+            <groupId>com.applitools</groupId>
+            <artifactId>eyes-selenium-java3</artifactId>
+            <version>3.151.2</version>
+        </dependency>
+
     </dependencies>
 </project>
