--- a/Config_and_Environment/config.properties
+++ b/Config_and_Environment/config.properties
@@ -1,4 +1,5 @@
 Browser=CHROME
-URL=https://www.seleniumeasy.com/test/basic-first-form-demo.html
+URL=https://www.seleniumeasy.com/test/
 SAUCELABS_KEY=f19a69a7-55c8-4c70-aff7-c0483b0a9353
+LOOK_FEEL_Testing=FALSE
 APPLITOOLS_API_KEY=mSy100iGSzZgdzamuajasRfayfFZXvbseYVvi8DN1y107hk110
