updated POM  and runner for Cucumber HTML reporting

--- a/Config_and_Environment/config.properties
+++ b/Config_and_Environment/config.properties
@@ -1,4 +1,4 @@
-Browser=CHROME
+Browser=CHROME_HEADLESS
 URL=https://www.seleniumeasy.com/test/
 SAUCELABS_KEY=f19a69a7-55c8-4c70-aff7-c0483b0a9353
 LOOK_FEEL_Testing=FALSE
