--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
                 <configuration>
                     <testFailureIgnore>true</testFailureIgnore>
+                    <parallel>both</parallel>
+                    <threadCount>4</threadCount>
                 </configuration>
             </plugin>
             <!-- For Cucumber HTML reporting-->
